Fix hover info alignment

--- a/css/components/element-details.scss
+++ b/css/components/element-details.scss
@@ -42,6 +42,7 @@
                     width: 80px;
                     font-size: 1.5em;
                     text-align: center;
+                    font-variant-numeric: tabular-nums;
                 }
             }
             h1 {
