--- a/css/components/periodic-table.scss
+++ b/css/components/periodic-table.scss
@@ -24,6 +24,7 @@
             font-family: 'Space Mono';
             font-weight: 100;
             top: .25rem;
+            font-variant-numeric: tabular-nums;
         }
 
         h3 {
